--- a/android/RemoteTouch/app/src/main/res/values/strings.xml
+++ b/android/RemoteTouch/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="Navigation.Drawer.Close" translatable="false">Close navigation drawer</string>
     <string name="Navigation.Developer">Developer</string>
     <string name="Navigation.Notifications">Notifications</string>
-    <string name="Navigation.Settings">Settings</string>
+    <string name="Navigation.MainSettings">Control</string>
     <string name="Navigation.Connection">Connection</string>
     <string name="Navigation.About">About</string>
 
