--- a/android/RemoteTouch/app/src/main/res/values/strings.xml
+++ b/android/RemoteTouch/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="About.Description">TODO description</string>
+    <string name="About.Description">The application allows to sending alerts to selected events. The alerts are presented to the user on his desktop. It\'s necessary to download desktop RemoteTouch client and enter the device name and pair-key.\nThis application is a part of diploma thesis developed at the University of West Bohemia.</string>
     <string name="About.Copyright" translatable="false">%1$s, %2$d</string>
     <string name="About.Contacts.Label">Contact</string>
 
